tests/integration/tests/macros/ui/http_error/fail/recursive_message_fn.rs
use reinhardt::HttpError;

#[derive(Debug, HttpError)]
enum ApiError {
	// Without an inherent method, this name would otherwise resolve to the
	// generated trait method and recurse.
	#[http_error(status = BAD_REQUEST, message_fn = client_message)]
	Invalid,
}

fn main() {}
